# vide-ticket

./: .gitattributes  .gitignore  CACHE_IMPLEMENTATION_SUMMARY.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  DOC_TEST_FIX_SUMMARY.md  MIGRATION_GUIDE.md  README.md  REFACTORING_PLAN.md  RELEASE_NOTES_v0.2.2.md  RETROSPECTIVE_FUZZY_SEARCH.md  clippy.toml  crates.js  deny.toml  help.html  index.html  recreate_mcp.sh  rustfmt.toml  search-index.js  settings.html  src-files.js  test_cache_integration.rs  test_doc_tests.rs  test_import.json  test_rust_2024_migration.sh  tickets.csv  tickets.json  vibe-ticket-issues.json  vibe-ticket-roadmap.md  vide-ticket-roadmap.md
.cargo/: audit.toml  config.toml
.claude/commands/: check-ci.md  ticket-status.md  ticket.md  work-on-ticket.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md  settings.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  pr-check.yml  release.yml  rust-ci.yml  update-claude.yml
.serena/: project.yml
.vibe-ticket/: .active_spec  active_ticket  config.yaml  mcp-config.yaml  state.yaml
.vibe-ticket/tickets/: 04a68852-f4a0-47f3-abec-f057103fd338.yaml  06719764-0064-455e-b755-745ebdc75c5f.yaml  (+70 more)
.vide-ticket/: .active_spec  active_ticket  config.yaml  state.yaml
benches/: README.md  cli_operations.rs  storage_operations.rs  ticket_operations.rs  vibe_ticket_benchmarks.rs  vide_ticket_benchmarks.rs
docs/: ARCHITECTURE_SPEC.md  CHANGELOG.md  CLI_MCP_INTEGRATION.md  FUZZY_SEARCH_IMPLEMENTATION_PLAN.md  architecture.md  benchmarks.md  claude-integration.md  commands.md  configuration.md  data-formats.md  fuzzy-search.md  git-worktree.md  mcp-guide.md  mcp-integration.md  rust-2024-migration-impact.md  rust-2024-migration-plan.md  spec-driven-development.md  spec-todo-mapping.md
examples/: cli_mcp_integration.rs  fuzzy_search_example.rs
patches/: 01-add-integration-to-cli.patch
release/: vide-ticket-v0.1.0-darwin-aarch64.tar.gz.sha256
rules/: agent.md
scripts/: build-release.sh  install.sh
src/: error.rs  lib.rs  main.rs  test_utils.rs
test-data/: MANUAL_TESTING_REPORT.md  array-import.json  demo-import.sh  invalid.json  simple-import.json  test-import.csv  test-import.yaml
test-project/: .gitignore  CLAUDE.md  test-export.csv  test-export.json
tests/: fuzzy_search_test.rs  test_import.rs  worktree_integration.rs  worktree_location_test.rs
vibe_ticket/: all.html  index.html  sidebar-items.js
(+483 files in other folders)
