[package]
name = "vibe-ticket"
version = "0.1.4"
edition = "2021"
authors = ["nwiizo"]
description = "A high-performance ticket management system for Vibe Coding environment"
license = "MIT"
repository = "https://github.com/nwiizo/vibe-ticket"
keywords = ["cli", "ticket", "project-management", "vibe-coding"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# CLI Framework
clap = { version = "4.5", features = ["derive", "cargo", "env"] }

# Async Runtime
tokio = { version = "1.40", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"

# Git Operations
git2 = { version = "0.19", features = ["vendored-libgit2", "vendored-openssl"] }
iconv = "0.1"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
config = "0.14"

# Template Engine
tera = "1.20"

# UUID Generation
uuid = { version = "1.10", features = ["v4", "serde"] }

# Path utilities
directories = "5.0"

# Terminal output
colored = "2.1"
indicatif = "0.17"

# Testing utilities
once_cell = "1.20"

# Date parsing
regex = "1.11"

# CSV support
csv = "1.3"

[dev-dependencies]
# Testing
tempfile = "3.10"
assert_cmd = "2.0"
predicates = "3.1"
mockall = "0.13"

# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "vibe_ticket_benchmarks"
harness = false

# Optional features
[features]
default = []
api = ["axum", "tower", "tower-http"]
database = ["sqlx"]
mcp = ["rmcp", "tokio-util", "async-trait"]

# Optional dependencies
[dependencies.axum]
version = "0.7"
optional = true

[dependencies.tower]
version = "0.4"
optional = true

[dependencies.tower-http]
version = "0.5"
features = ["fs", "trace"]
optional = true

[dependencies.sqlx]
version = "0.8"
features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"]
optional = true

# MCP dependencies
[dependencies.rmcp]
version = "0.3.2"
features = ["server"]
optional = true

[dependencies.tokio-util]
version = "0.7"
optional = true

[dependencies.async-trait]
version = "0.1"
optional = true

[profile.release]
lto = true
opt-level = 3
codegen-units = 1

[profile.dev]
opt-level = 0

[profile.test]
opt-level = 0